[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = "Web Crawler exercise for bringing the 30 first entries from a web page"
authors = ["Jorge Guerra <jagl257@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
